# Frame-Scope

./: .gitignore  README.md  pyproject.toml
manifests/: gemma_scope_1b.json
scripts/: bootstrap_macos.sh  download_gemma_scope_1b.py  materialize_gemma_scope_cfgs.py  test_local_inference.py
src/frame_scope/: __init__.py  gemma_scope_local.py
